finally fixed textarea copy on mobile (i think)

--- a/css/style.css
+++ b/css/style.css
@@ -242,3 +242,21 @@ body {
 .no-pad-right{
     padding-right:0px;
 }
+
+#url-textarea{
+    min-width: 14rem;
+    height: 1.5rem;
+    margin-right: 1rem;  
+    resize: none;
+    border: none;
+    font-size: 87.5%;
+    color: #e83e8c;
+    font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    box-sizing: border-box;  
+    background-color: transparent;
+    outline: none;
+}
+
+.modal-body{
+    overflow: hidden;
+}
